Added a cat image and a few elements

--- a/cartoonhero.html
+++ b/cartoonhero.html
@@ -1,4 +1,15 @@
-<h1> Hey. I'm a big heading </h1>
-<p>Hey, I am a paragraph element. cool huh?</p>
-
-<a href="https://google.com" target="_blank" title="Let's go to google"> Click me I am a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>test page</title>
+</head>
+<body>
+	<title>test page</title>title>
+	<h1> Hey. I'm a big heading </h1>
+	<p>Hey, I am a <b>paragraph</b> element. cool huh?</p>
+	<a href="https://google.com" target="_blank" title="Let's go to google"> Click me I am a link!</a>
+	<p>My name is:<br>
+	kitty cat</p>
+	<img src="https://ichef.bbci.co.uk/news/1024/branded_news/12A9B/production/_111434467_gettyimages-1143489763.jpg">
+</body>
+</html>
