change the whole website to zayed

--- a/index.html
+++ b/index.html
@@ -1,42 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Wreck-it Raplh</title>
-	<link rel="icon" href="ralph.jpeg">
+	<title>
+		
+		
+	</title>
 </head>
+<h1> Zayed Alwheibi,
+		Ali AlAttas,
+		Mohammed Alhammadi,
+		Saeed Alboloushi,
+		Saif Almaamari </h1>
+
+
 <body>
-<!-- header element -->
-<header>
-	<img src="ralph.jpeg">
-	<h1>Wreck-it Raplh</h1>
-</header>
-<!-- main element -->
-<main>
-	<h2>About ralph</h2>
-	<p>Ralph is awesome! He's an 8 bit video game bad guy who goes through adventures to prove that he is a good guy. </p>
-	<img src="Ralph-adventure.jpeg">
 
-	<h2>ralph and his characteristics</h2>
-	<ol>
-		<li>He's got big hands</li>
-		<li>He is treated badly</li>
-		<li>He is trying to be a good guy</li> 
+	<p> <a href="file:///Users/student/Desktop/Cartoon-hero-final/Math.pdf"> Math </a></p>
 
-	</ol>
-	<!-- friends -->
-<h2> Ralph's friends </h2>
-<p>He has a lot of friends, click on the links below to know more about them</p>
-<ul>
-	<li> <a target="_blank" href="https://en.wikipedia.org/wiki/Pac-Man">Pac-man</a></li>
-	<li> <a target="_blank" href="https://en.wikipedia.org/wiki/Mario">Mario</a></li>
-	<li> <a target="_blank" href="https://en.wikipedia.org/wiki/Sonic_the_Hedgehog_(film)">Sonic</a></li>
-
-</ul>
-
-<footer>
-	<p>This site was created during a Tap Tap Kaboom class. <a target="_blank" href="https://taptapkaboomcalss.com"></a> &copy;Eissa </p>
-</footer>
-
-</main>
 </body>
 </html>
