added new tab1 + gold

--- a/untitled.html
+++ b/untitled.html
@@ -13,16 +13,16 @@
 		Saif Almaamari </h1>
 
 
-<body>
+<body bgcolor="gold"> 
 
-	<p> <a target="blank" href="https://mail.google.com/mail/u/0?ui=2&ik=b754529517&attid=0.1&permmsgid=msg-a:r3724586993045582314&view=att&disp=safe&realattid=f_kbtyhqcx0"> Math </a></p>
+	<p> <a target="_blank" href="https://mail.google.com/mail/u/0?ui=2&ik=b754529517&attid=0.1&permmsgid=msg-a:r3724586993045582314&view=att&disp=safe&realattid=f_kbtyhqcx0"> Math </a></p>
 
-	<p> <a target="blank" href="https://adnocschae-my.sharepoint.com/:p:/g/personal/zayed13944_adnocschools_net/EcB9BoW8mFlEpc1GeLZbjGQBWNIeEbSXsiwf_AVgrT3ZHg?e=Jh8gPY
+	<p> <a target="_blank" href="https://adnocschae-my.sharepoint.com/:p:/g/personal/zayed13944_adnocschools_net/EcB9BoW8mFlEpc1GeLZbjGQBWNIeEbSXsiwf_AVgrT3ZHg?e=Jh8gPY
 "> science </a></p>
 
-	<p> <a target="blank" href="https://1drv.ms/w/s!Ajn9_5DqAsM2gy4RlURHV7GEKgE_"> English </a></p>
+	<p> <a target="_blank" href="https://1drv.ms/w/s!Ajn9_5DqAsM2gy4RlURHV7GEKgE_"> English </a></p>
 
-	<p> <a target="blank" href="https://www.google.com"> ESS </a></p>
+	<p> <a target="_blank" href="https://www.google.com"> ESS </a></p>
 
 </body>
 </html>
