--- a/untitled.html
+++ b/untitled.html
@@ -22,7 +22,9 @@
 
 	<p> <a target="_blank" href="https://1drv.ms/w/s!Ajn9_5DqAsM2gy4RlURHV7GEKgE_"> English </a></p>
 
-	<p> <a target="_blank" href="https://www.google.com"> ESS </a></p>
+	<p> <a target="_blank" href="Preview attachment G8 ESS Planning Sheets (1) (3)-1 copy.docxG8 ESS Planning Sheets (1) (3)-1 copy.docx107 KB"> ESS word </a></p>
+
+	<p> <a target="Preview attachment Presentation.pptxPresentation.pptx253 KB"> ESS ppt </a></p>
 
 </body>
 </html>
