--- a/untitled.html
+++ b/untitled.html
@@ -22,9 +22,9 @@
 
 	<p> <a target="_blank" href="https://1drv.ms/w/s!Ajn9_5DqAsM2gy4RlURHV7GEKgE_"> English </a></p>
 
-	<p> <a target="_blank" href="Preview attachment G8 ESS Planning Sheets (1) (3)-1 copy.docxG8 ESS Planning Sheets (1) (3)-1 copy.docx107 KB"> ESS word </a></p>
+	<p> <a target="_blank" href="https://drive.google.com/file/d/15BdNAI9oDoCu_Mzr6Elq8H7A4t0AHWZy/view?usp=sharing"> ESS word </a></p>
 
-	<p> <a target="Preview attachment Presentation.pptxPresentation.pptx253 KB"> ESS ppt </a></p>
+	<p> <a target="https://drive.google.com/file/d/1FO9aZEGZ7D9hxxWlkFPmFQLxvuYEhUw9/view?usp=sharing"> ESS ppt </a></p>
 
 </body>
 </html>
