--- a/untitled.html
+++ b/untitled.html
@@ -24,7 +24,7 @@
 
 	<p> <a target="_blank" href="https://drive.google.com/file/d/15BdNAI9oDoCu_Mzr6Elq8H7A4t0AHWZy/view?usp=sharing"> ESS word </a></p>
 
-	<p> <a target="https://drive.google.com/file/d/1FO9aZEGZ7D9hxxWlkFPmFQLxvuYEhUw9/view?usp=sharing"> ESS ppt </a></p>
+	<p> <a target="_blank" href="https://drive.google.com/file/d/1FO9aZEGZ7D9hxxWlkFPmFQLxvuYEhUw9/view?usp=sharing"> ESS ppt </a></p>
 
 </body>
 </html>
